# EGX-Data-MCP-Server

./: Dockerfile  README.md  egx.py  main.py  precious_metals.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: docker-build.yml
