[project]
name = "egx-mcp"
version = "0.1.0"
description = "MCP server for Egyptian Exchange (EGX) stock tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "mcp[cli]>=1.6.0",
    "tradingview-ta>=3.3.0",
]
